fix: :bug: stop shifting

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,13 +4,14 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-display: optional;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
